fix: page overflow-x on mobile

--- a/src/templates/index-page.module.sass
+++ b/src/templates/index-page.module.sass
@@ -1,6 +1,10 @@
 @import "../styles/_global"
 @import "../styles/_normalize"
 
+.noOverflow
+  overflow-x: hidden
+  max-width: 100vw
+
 .hiddenImg
   height: 1px
 
